# softmusic

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/python-ai/: .env.example  pyproject.toml
apps/python-ai/alembic/: env.py
apps/python-ai/alembic/versions/: 001_initial_schema.py  002_song_urls_and_cifra_variations.py  003_saas_users_bands_billing.py  004_cifra_variation_band_id.py  005_analysis_payload_longtext.py
apps/python-ai/app/: __init__.py  config.py  logging.py  main.py  worker.py
apps/python-ai/app/application/services/: admin_service.py  analysis_service.py  audio_pipeline.py  auth_service.py  band_service.py  billing_service.py  cifra_variation_builder.py  email_service.py
apps/python-ai/app/domain/: errors.py
apps/python-ai/app/domain/interfaces/: source_downloader.py
apps/python-ai/app/infrastructure/billing/: asaas_client.py
apps/python-ai/app/infrastructure/cifra/: cifraclub_importer.py
apps/python-ai/app/infrastructure/database/: models.py  session.py
apps/python-ai/app/infrastructure/download/: resolver.py  youtube_downloader.py
apps/python-ai/app/infrastructure/jobs/: cancellation.py
apps/python-ai/app/infrastructure/media/: ffmpeg.py
apps/python-ai/app/infrastructure/ml/: demucs_separator.py  device.py  features.py  stem_harmony.py
apps/python-ai/app/scripts/: seed_admin.py
apps/python-ai/scripts/: e2e_upload.py
apps/python-ai/tests/: test_audio_pipeline.py  test_cifraclub_importer.py  test_ffmpeg.py  test_playback.py  test_stem_harmony.py  test_youtube_dedup.py  test_youtube_downloader.py
(+194 files in other folders)
