[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "softmusic-python-ai"
version = "0.1.0"
description = "SoftMusic AI analysis service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiomysql>=0.2.0",
  "pymysql>=1.1.0",
  "cryptography>=44.0.0",
  "alembic>=1.14.0",
  "celery[redis]>=5.4.0",
  "redis>=5.2.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "PyJWT>=2.10.0",
  "bcrypt>=4.2.0",
  "librosa>=0.10.2",
  "numpy>=2.1.0",
  "soundfile>=0.12.1",
  "pydub>=0.25.1",
  "prometheus-client>=0.21.0",
  "structlog>=24.4.0",
  "dependency-injector>=4.43.0",
  "yt-dlp>=2025.1.0",
  "demucs>=4.0.1",
  "torchaudio>=2.5.0",
  "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
softmusic-worker = "app.worker:main"
